@@ -17,17 +17,20 @@
     <pdi.version>10.2.0.0-SNAPSHOT</pdi.version>
     <pentaho-metaverse.version>10.2.0.0-SNAPSHOT</pentaho-metaverse.version>
     <platform.version>10.2.0.0-SNAPSHOT</platform.version>
+    <commons-xul.version>10.2.0.0-SNAPSHOT</commons-xul.version>
     <commons-lang.version>2.6</commons-lang.version>
     <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
     <json-simple.version>1.1</json-simple.version>
     <junit.version>4.12</junit.version>
-    <mockito.version>1.10.19</mockito.version>
-    <powermock.version>1.7.3</powermock.version>
+    <mockito.version>5.10.0</mockito.version>
     <jface.version>3.3.0-I20070606-0010</jface.version>
     <dependency.com.tinkerpop.blueprints.version>2.6.0</dependency.com.tinkerpop.blueprints.version>
     <jersey2-apache-connector.version>2.30</jersey2-apache-connector.version>
     <jersey2.version>2.38</jersey2.version>
     <jaxrs.version>2.1.6</jaxrs.version>
+    <argLine>
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+    </argLine>
   </properties>
 
   <dependencies>
@@ -221,21 +224,6 @@
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>${mockito.version}</version>
       <scope>test</scope>
@@ -296,6 +284,24 @@
       <artifactId>jetty-util</artifactId>
       <version>${jetty.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.pentaho</groupId>
+      <artifactId>commons-xul-core</artifactId>
+      <version>${commons-xul.version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
